--- a/wsgi/templates/done.html
+++ b/wsgi/templates/done.html
@@ -2,7 +2,7 @@
 <html lang='en'>
   <head>
     <meta charset='utf-8' />
-    <link charset="utf-8" href="styles.css" media="screen" rel="stylesheet" type="text/css">
+    <link charset="utf-8" href="/static/styles/styles.css" media="screen" rel="stylesheet" type="text/css">
     <title>GDB Flee | Your got out</title>
   </head>
   <body>
