adding about page

--- a/wsgi/templates/done.html
+++ b/wsgi/templates/done.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8' />
     <link charset="utf-8" href="/static/styles/styles.css" media="screen" rel="stylesheet" type="text/css">
-    <title>GDB Flee | Your got out</title>
+    <title>GDB Flee | Your data got out</title>
   </head>
   <body>
     <div role='container'>
@@ -18,6 +18,9 @@
           <p>
             Created by
             <a href='http://twitter.com/mweisman/'>Michael Weisman</a>
+          </p>
+          <p>
+            <a href='/about'>About this app</a>
           </p>
         </footer>
       </article>
