--- a/wsgi/templates/error.html
+++ b/wsgi/templates/error.html
@@ -19,6 +19,9 @@
             Created by
             <a href='http://twitter.com/mweisman/'>Michael Weisman</a>
           </p>
+          <p>
+            <a href='/about'>About this app</a>
+          </p>
         </footer>
       </article>
     </div>
