--- a/wsgi/templates/index.html
+++ b/wsgi/templates/index.html
@@ -36,6 +36,9 @@
             Created by
             <a href='http://twitter.com/mweisman/'>Michael Weisman</a>
           </p>
+          <p>
+            <a href='/about'>About this app</a>
+          </p>
         </footer>
       </article>
     </div>
