fixing about page typo introduced when fixing an about page typo in e46dc8f

--- a/wsgi/templates/about.html
+++ b/wsgi/templates/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8' />
     <link charset="utf-8" href="/static/styles/styles.css" media="screen" rel="stylesheet" type="text/css">
-    <title>GDB Flee | Your wants out</title>
+    <title>GDB Flee | Your data wants out</title>
   </head>
   <body>
     <div role='container'>
